# EvalBench

./: .env.example  .gitignore  Eval.md  LICENSE  README.md  drizzle.config.ts  evalbench-design-spec.html  evalbench-mockup.html  evalbench.db  evalbench_audit.md  package-lock.json  package.json  pyproject.toml  runs.json  test_zod.js  vite.config.ts
attached_assets/: Pasted-Now-I-have-enough-information-to-write-a-comprehensive-_1773200428532.txt
backend/: database.py  main.py  models.py  schemas.py  security.py
backend/routers/: arena.py  datasets.py  eval_results.py  eval_runs.py  models.py  ollama.py  settings.py
backend/scoring/: __init__.py  bertscore.py  bleu.py  classification.py  code_exec.py  distinct.py  embeddings.py  exact_match.py  llm_judge.py  meteor.py  rag.py  rouge.py  semantic_sim.py  speed.py  stats.py  toxicity.py
backend/services/: dataset_importer.py  dataset_seeder.py  eval_runner.py  ollama.py  storage.py
client/: index.html  requirements.md
client/src/: App.tsx  index.css
client/src/hooks/: use-arena.ts  use-datasets.ts  use-eval.ts  use-models.ts  use-settings.ts
client/src/lib/: stats.ts
client/src/pages/: Arena.tsx  ArenaLeaderboard.tsx  CompareModels.tsx  Dashboard.tsx  Datasets.tsx  EvalWizard.tsx  Learn.tsx  ModelDetails.tsx  Models.tsx  RunDetails.tsx  RunHistory.tsx  Settings.tsx  not-found.tsx
docs/superpowers/plans/: BACKLOG.md  (+4 more)
server/: db.ts  ollama.ts  routes.ts  storage.ts
shared/: routes.ts  schema.ts
tests/: conftest.py  test_code_exec_metrics.py  test_embedding_metrics.py  test_evalbench_smoke.py
(+9 files in other folders)
