[project]
name = "evalbench"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "nltk==3.8.1",
    "numpy>=1.26.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "rouge-score==0.1.2",
    "sacrebleu==2.3.1",
    "sqlalchemy==2.0.36",
    "sse-starlette==2.1.3",
    "uvicorn[standard]==0.30.6",
]
