[project]
name = "evalbench"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "bert-score==0.3.13",
    "httpx==0.27.2",
    "nltk==3.8.1",
    "numpy>=1.26.4",
    "openai>=2.26.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "rouge-score==0.1.2",
    "sacrebleu==2.3.1",
    "sqlalchemy==2.0.36",
    "sse-starlette==2.1.3",
    "uvicorn[standard]==0.30.6",
    "anthropic>=0.40.0",
    "scipy>=1.17.1",
    "cryptography>=42.0.0",
    "evaluate>=0.4.0",
    "sentence-transformers>=5.3.0",
    "detoxify>=0.5.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.11.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
